# ean_est_python_2024

./: README.md  pyproject.toml
Código/: Correlación.ipynb  Distribuciones_de_Probabilidad_01.ipynb  Distribuciones_de_Probabilidad_02.ipynb  Distribuciones_de_Probabilidad_03.ipynb  Distribuciones_de_probabilidad_04.ipynb  Inferencia_01.ipynb  Inferencia_02.ipynb  Inferencia_03.ipynb  Inferencia_04.ipynb  Mi_primer_cuaderno.ipynb  Probabilidad.ipynb  Probabilidad_02.ipynb  Regresión_01.ipynb  Regresión_02.ipynb  Regresión_03.ipynb  Regresión_05.ipynb  Regresión__04.ipynb  Relación entre minutos usados e ingreso de clientes - Introducción a Pandas.ipynb  Ridge_and_Lasso_Regression_Explanation.ipynb  Tarea.ipynb
Datos/Clase 2/: ATLANTIC SOUTH AREA.csv  CALIFORNIA NORTH AREA.csv  CENTRAL-SOUTH TEXAS AREA.csv  CHICAGO AREA.csv  DALLAS AREA.csv  DC-MARYLAND-VIRGINIA AREA.csv  GREAT LAKES AREA.csv  HOUSTON AREA.csv  LOS ANGELES AREA.csv  MIDWEST AREA.csv  NEW ENGLAND AREA.csv  NEW YORK CITY AREA.csv  NORTH FLORIDA AREA.csv  NORTHWEST-ROCKY MOUNTAIN AREA.csv  OHIO AREA.csv  PHILADELPHIA AREA.csv  SOUTH FLORIDA AREA.csv  SOUTHWEST AREA.csv  TENNESSEE AREA.csv
Datos/Clase 2/.ipynb_checkpoints/: Credito_dias-checkpoint.csv
